# data_compression_project

./: CMakeLists.txt  README.md  benchmarks.cpp  main.cpp  plots_maker.py  stats_util.py
csv/: stats_Wed_Sep_28_17_16_31_2022 .csv  stats_Wed_Sep_28_17_22_08_2022 .csv  stats_Wed_Sep_28_17_41_20_2022 .csv
data/: json.json
include/: CMakeLists.txt  bit_vector.hpp  dac.hpp  essentials.hpp  file_scanner.hpp  integer_codes.hpp  nat_lang_optimizer.hpp  sdc.hpp  select_support_array.hpp  util.hpp
include/dacs/: bitmap.c  bitmap.h  dacs.c  dacs.h  test.c
